fix scrollbar coloring

--- a/sidepanel/css/index.css
+++ b/sidepanel/css/index.css
@@ -1,2 +1,15 @@
 @import "tailwindcss";
 @plugin "@tailwindcss/typography";
+
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: rgba(100, 100, 100, 0.5); /* Or whatever, can also be transparent */
+  border-radius: 4px;
+}
